5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4272/executions/1602_2894.log
== TEST (2019-03-20 18:38:01) 
-- CODE:
var = imput("100.0*8+45.0:")
jogos=8
frete=45.0
valor=100.0
total=845.0
print(var)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var = imput("100.0*8+45.0:")
NameError: name 'imput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:47:20) 
-- CODE:
var = imput("100.0*8+45")
total = 845.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var = imput("100.0*8+45")
NameError: name 'imput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:49:12) 
-- CODE:
var = float(imput("100.0*8+45"))
total = 845.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var = float(imput("100.0*8+45"))
NameError: name 'imput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:49:29) 
-- CODE:
var = float(imput("100.0*8+45:"))
total = 845.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var = float(imput("100.0*8+45:"))
NameError: name 'imput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:50:00) 
-- CODE:
var = (imput("100.0*8+45.0:")
total = 845.0
-- ERROR:
File "XXXX", line 2
    total = 845.0
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:50:28) 
-- CODE:
var = (imput("100.0*8+45.0:")
total = 845
-- ERROR:
File "XXXX", line 2
    total = 845
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:55:36) 
-- CODE:
var = imput("100.8")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var = imput("100.8")
NameError: name 'imput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:55:52) 
-- CODE:
var = imput("100.0*8")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var = imput("100.0*8")
NameError: name 'imput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:57:42) 
-- CODE:
var = float(imput("100.0"))
total= 8*var + 45

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var = float(imput("100.0"))
NameError: name 'imput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:58:44) 
-- CODE:
var = float(input("100.0"))
total= 8*var + 45
print(total)

-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:59:04) 
-- CODE:
var = float(input("100.0"))
total= 8*var + 45
print(total)

-- EXECUTION TIME:
0.166467
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:27:40) 
-- CODE:
var = float(input("valor unitário"))
total= 8*var + 45
print(total)

-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:27:46) 
-- CODE:
var = float(input("valor unitário"))
total= 8*var + 45
print(total)

-- EXECUTION TIME:
0.131299
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
